<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="55dp">
    <LinearLayout
        android:id="@+id/layoutCartBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/border_black"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="7dp"
        android:weightSum="6">

        <FrameLayout
            android:id="@+id/flayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:padding="5dp">

            <com.kitever.app.context.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/prodimg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/product_box"
                app:civ_border_color="@color/listview_image_color"
                app:civ_border_width="1dp" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCartBuyAdapterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Product Name" />

            <TextView
                android:id="@+id/tvCartBuyAdapterCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Category Name"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvCartBuyAdapterBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Brand Name"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCartBuyAdapterProductPriceIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/dollor_icon"
                    android:textColor="@color/listview_font_color"
                    android:textSize="@dimen/order_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvCartBuyAdapterPriceVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="0000"
                    android:textColor="@color/listview_font_color"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:textSize="12sp"
                    android:text="Qty : "/>
                <TextView
                    android:id="@+id/tvCartBuyAdapterQtyStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCartBuyAdapterQtyMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/cart_minus"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/tvCartBuyAdapterQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:minWidth="25dp"
                    android:textSize="14sp"
                    android:maxLength="3"
                    android:hint="0"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:text="000" />

                <TextView
                    android:id="@+id/tvCartBuyAdapterQtyPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/cart_plus"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCartBuyAdapterRemoveCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/trash_icon"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>